--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Bennibor Onisomemise" />
     <title>LaundRun! | About</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   </head>
   <body>
     <header>
