--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
     <div class="wailo">
       <img src="./image/odami.png">
-      <h4>Odami Ope</h4>
+      <h4>Oluborode Ope</h4>
       <h5>Business Head</h5>
     </div>
     <div class="wailo">
