made change to index.html

--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
     <footer>
       <p>LaundRun! Copyright &copy; 2021</p>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
