--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="wailo">
       <img src="./image/mise.png">
      
-      <h4>Bennibor Onisomemise</h4>
+      <h4>Bennibor Onisoya</h4>
       <h5>Marketing Head</h5>
     </div>
      </div>
