--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <img src="./image/coffee stain.png" />
           <h3>Stain Removal</h3>
           <p>
-            We help remove stains that may 'think' are permanent in one wash
+            We help remove stains that you may 'think' are permanent in one wash
           </p>
         </div>
       </div>
@@ -84,7 +84,7 @@
     <div class="wailo">
       <img src="./image/mise.png">
      
-      <h4>Bennibor Onisoya</h4>
+      <h4>Bennibor Mise</h4>
       <h5>Marketing Head</h5>
     </div>
      </div>
