--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <div class="wailo">
       <img src="./image/odami.png">
       <h4>Oluborode Ope</h4>
-      <h5>Business Head</h5>
+      <h5>Business/Finance Head</h5>
     </div>
     <div class="wailo">
       <img src="./image/mise.png">
      
-      <h4>Bennibor Mise</h4>
-      <h5>Marketing Head</h5>
+      <h4>Bennibor Onisomemise</h4>
+      <h5>Marketing/Strategy Head</h5>
     </div>
      </div>
 
