made changes to home page and login page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Online laudry service platform" />
     <meta name="author" content="Bennibor Onisomemise" />
     <title>LaundRun! | Welcome</title>
@@ -27,23 +27,26 @@
     </header>
     <section id="showcase">
       <div class="container">
+        <div class="banner">
         <h1>Welcome to LaundRun!</h1>
-        <h4><i>laundry on the run....</i></h4>
+        <h5><i>laundry on the run....</i></h5>
         <p>
           <b>
             Are you tired of getting back after having a long and stressful day
             and still having to do your laundry all by yourself,<br />
             well you don't have to worry anymore,<br />
-            with the LaundRun you have everything under control.</b
+            with the LaundRun app you have everything under control.</b
           >
+          
         </p>
+      </div>
       </div>
     </section>
     <section id="boxes">
       <div class="container">
         <div class="box">
           <img src="./image/drycleaning.png" />
-          <h3>Dry Cleaning</h3>
+          <h4>Dry Cleaning</h4>
           <p>
             We clean clothes and fabrics by using a chemical solvent that
             contains little or no water
@@ -51,12 +54,12 @@
         </div>
         <div class="box">
           <img src="./image/upholstery.png" />
-          <h3>Carpet and Upholstery Deep Clean</h3>
+          <h4>Carpet and Upholstery Deep Clean</h4>
           <p>We deep clean carpets, sofas, etc making them look brand new</p>
         </div>
         <div class="box">
           <img src="./image/coffee stain.png" />
-          <h3>Stain Removal</h3>
+          <h4>Stain Removal</h4>
           <p>
             We help remove stains that you may 'think' are permanent in one wash
           </p>
