--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Online laudry service platform" />
     <meta name="author" content="Bennibor Onisomemise" />
     <title>LaundRun! | About</title>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container"> 
         <div id="branding">
           <h1>LaundRun!</h1>
         </div>
